Fix alignment of donation banner in farsi.

--- a/wiki/src/donate-banner.css
+++ b/wiki/src/donate-banner.css
@@ -127,9 +127,12 @@ html[dir="rtl"] #donate-strip {
     transform: scaleX(-1);
 }
 
-html[dir="rtl"] #donate-strip * {
-    transform-origin: 245px;
+html[dir="rtl"] #donate-strip .donate-en {
     transform: scaleX(-1);
+}
+
+html[dir="rtl"] .donate-l .donate-title {
+    margin: 0 25% 0 0;
 }
 
 html[dir="rtl"] #donate-strip .donate-title-big {
@@ -183,6 +186,10 @@ html[dir="rtl"] #donate-strip .donate-title-big {
         right: auto;
         left: 0;
         transform-origin: 165%;
+    }
+
+    html[dir="rtl"] body.fa .donate-l .donate-title {
+        margin: 0 50px 0 0;
     }
 
     #donate-strip #donate-slogan-off,
